[tool.poetry]
name = "hbsc-tools"
version = "0.1.0"
description = ""
authors = ["Hairy Bear Social Club <hairybearsocialclub@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hbsc-utils = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
